<resources>
    <string name="app_name">Globetrotter</string>
    <string name="preference_file_key">upc.fib.victor.globetrotter</string>

    <string name="email">Email</string>
    <string name="register">Registrarse</string>
    <string name="entrar">Entrar</string>
    <string name="logo_de_la_aplicaci_n">Logo de la aplicación.</string>

    <string name="c_mo_te_llamas">¿Cómo te llamas?</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="siguiente">siguiente</string>
    <string name="cu_ndo_naciste">¿Cuándo naciste?</string>
    <string name="introduce_tu_correo_electr_nico">Introduce tu correo electrónico y contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="seguir">Seguir</string>
    <string name="ver_el_n_mero_de_tel_fono">Ver el número de teléfono</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="paises">Paises</string>
    <string name="editar">Editar</string>
    <string name="añadir">añadir</string>
    <string name="siguiendo">siguiendo</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="nombreLbl">Nombre:</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="apellidosLbl">Apellidos:</string>
    <string name="fecha_de_nacimiento_lbl">Fecha de nacimiento:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="aceptar">aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="barra">/</string>
    <string name="selecciona_pais">Selecciona el pais</string>

    <string name="cambio_de_foto">ha cambiado su foto de perfil.</string>
    <string name="visitado">Visitado</string>
    <string name="buscar">Buscar</string>
    <string name="busca_el_pa_s">Busca el país</string>
    <string name="action_add_note">action_add_note</string>
    <string name="titulo_del_viaje">Titulo del viaje</string>
    <string name="escribe_experi_ncias_vividas_an_cdotas_situaciones">Escribe anécdotas, situaciones y/o experiencias vividas…</string>
    <string name="titulo_de_la_p_gina">Titulo de la página</string>
    <string name="escribe_una_nueva_p_gina_de_tu_diario">Escribe una nueva página de tu diario…</string>

    <string name="escribe_un_comentario">Escribe un comentario</string>
    <string name="escribe_una_publicaci_n">Escribe una publicación</string>
    <string name="buscar_usuario">Buscar usuario</string>
    <string name="buscar_compa_ero_de_viaje">Buscar Compañero de viaje</string>
    <string name="flecha"><![CDATA[->]]></string>
    <string name="country">Country:</string>
    <string name="selecciona_un_pais">Selecciona un país</string>
    <string name="pa_s">País:</string>
    <string name="fecha_inicio">Fecha Inicio:</string>
    <string name="fecha_fin">Fecha Fin:</string>
    <string name="presupuesto">Presupuesto:</string>
    <string name="comentario">Comentario:</string>
    <string name="publicar">Publicar</string>
    <string name="fecha_fin_del_viaje">Fecha Fin del viaje</string>
    <string name="fecha_de_inicio_del_viaje">Fecha de inicio del viaje</string>
    <string name="presupuesto_del_viaje">Presupuesto del viaje (Opcional)</string>
    <string name="breve_descripcion_del_viaje_opcional">Breve descripcion del viaje (Opcional)</string>
    <string name="fecha_regreso">Fecha regreso:</string>
    <string name="fecha_inicio_del_viaje">Fecha inicio del viaje:</string>
    <string name="fecha_de_regreso">Fecha de regreso:</string>
    <string name="presupuesto_del_viaje2">Presupuesto del viaje:</string>
    <string name="join_trip">join trip</string>
    <string name="unjoin_trip">unjoin trip</string>
    <string name="a_n_no_hay_nadie_apuntado_s_el_primero">Aún no hay nadie apuntado. Sé el primero.</string>
    <string name="direcci_n">Dirección:</string>
    <string name="n_mero_de_tel_fono_lbl">Número de teléfono:</string>
    <string name="p_gina_webLbl">Página web:</string>
    <string name="tel_fonoLbl">Teléfono:</string>
    <string name="action_add_fav">action add fav</string>
    <string name="action_rmv_fav">action rmv fav</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="recomendaciones_de_usuarios">Recomendaciones de usuarios</string>
    <string name="mis_recomendaciones">Mis recomendaciones</string>
    <string name="mis_puntos_de_inter_s">Mis puntos de interés</string>
    <string name="action_add_recommendation">action_add_recommendation</string>
    <string name="introduce_un_mensaje_para_la_recomendaci_n_a_tus_seguidores">Introduce un mensaje para la recomendación a tus seguidores:</string>
    <string name="m_todo_de_contacto">Método de contacto:</string>
    <string name="m_vil">Móvil</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="direcci_n_de_correo_electr_nico">Dirección de correo electrónico</string>
    <string name="direcci_n_email">Dirección email:</string>
    <string name="n_m_tel_fono">Núm. Teléfono:</string>
    <string name="contacto">Contacto:</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="t_rminos_y_condiciones">condiciones.</string>


    <string name="terminos_y_condiciones1"> POLÍTICA DE PRIVACIDAD</string>
    <string name="terminos_y_condiciones2">El presente Política de Privacidad establece los términos en que Globetrotter usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</string>
    <string name="terminos_y_condiciones3">Información que es recogida</string>
    <string name="terminos_y_condiciones4">Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.</string>
    <string name="terminos_y_condiciones5">Uso de la información recogida</string>
    <string name="terminos_y_condiciones6">Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.</string>
    <string name="terminos_y_condiciones7">Globetrotter está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.</string>
    <string name="terminos_y_condiciones8">Cookies</string>
    <string name="terminos_y_condiciones9">Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web, y también facilita las futuras visitas a una web recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web.</string>
    <string name="terminos_y_condiciones10">Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente, visitas a una web . Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.</string>
    <string name="terminos_y_condiciones11">Enlaces a Terceros</string>
    <string name="terminos_y_condiciones12">Este sitio web pudiera contener enlaces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.</string>
    <string name="terminos_y_condiciones13">Control de su información personal</string>
    <string name="terminos_y_condiciones14">En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.  Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico.  En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.</string>
    <string name="terminos_y_condiciones15">Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.</string>
    <string name="terminos_y_condiciones16">Globetrotter Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.</string>


</resources>
