<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical">
    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorBlack"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close"
        android:layout_alignParentRight="true" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/closeBtn">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/term1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:text="@string/terminos_y_condiciones1"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones2"
                android:layout_below="@id/term1"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/term3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones3"
                android:layout_below="@id/term2"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones4"
                android:layout_below="@id/term3"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/term5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones5"
                android:layout_below="@id/term4"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones6"
                android:layout_below="@id/term5"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones7"
                android:layout_below="@id/term6"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/term8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/terminos_y_condiciones8"
                android:layout_below="@id/term7"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones9"
                android:layout_below="@id/term8"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones10"
                android:layout_below="@id/term9"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/term11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones11"
                android:layout_below="@id/term10"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones12"
                android:layout_below="@id/term11"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/term13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones13"
                android:layout_below="@id/term12"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones14"
                android:layout_below="@id/term13"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones15"
                android:layout_below="@id/term14"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/term16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/terminos_y_condiciones16"
                android:layout_below="@id/term15"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>