<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Fragments.AddTripProposalFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/countryTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pa_s"
            android:layout_alignBaseline="@id/countryEditTxt"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/countryEditTxt"
            android:hint="@string/selecciona_un_pais"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_toRightOf="@id/countryTxtView"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/countryTxtView"
            android:layout_alignLeft="@id/fechaFinEditTxt"
            android:layout_alignStart="@id/fechaFinEditTxt"
            android:layout_alignRight="@id/fechaFinEditTxt"
            android:layout_alignEnd="@id/fechaFinEditTxt" />

        <TextView
            android:id="@+id/fechaInicioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryTxtView"
            android:text="@string/fecha_inicio"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/fechaInicioEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:hint="@string/fecha_de_inicio_del_viaje"
            android:textSize="14sp"
            android:layout_toRightOf="@id/fechaInicioTextView"
            android:layout_toEndOf="@id/fechaInicioTextView"
            android:layout_alignLeft="@id/fechaFinEditTxt"
            android:layout_alignStart="@id/fechaFinEditTxt"
            android:layout_alignRight="@id/fechaFinEditTxt"
            android:layout_alignEnd="@id/fechaFinEditTxt"
            android:layout_alignBaseline="@id/fechaInicioTextView"/>

        <TextView
            android:id="@+id/fechaFinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fechaInicioTextView"
            android:text="@string/fecha_regreso"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/fechaFinEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:hint="@string/fecha_fin_del_viaje"
            android:textSize="14sp"
            android:layout_toRightOf="@id/fechaFinTextView"
            android:layout_toEndOf="@id/fechaFinTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignBaseline="@id/fechaFinTextView"/>

        <TextView
            android:id="@+id/budgetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presupuesto"
            android:layout_below="@id/fechaFinTextView"
            android:layout_marginTop="30dp"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView"/>
        <EditText
            android:id="@+id/budgetEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/fechaFinTextView"
            android:layout_toRightOf="@id/budgetTextView"
            android:layout_toEndOf="@id/budgetTextView"
            android:layout_alignBaseline="@id/budgetTextView"
            android:hint="@string/presupuesto_del_viaje"
            android:textSize="14sp"
            android:layout_alignLeft="@id/fechaFinEditTxt"
            android:layout_alignStart="@id/fechaFinEditTxt"
            android:layout_alignRight="@id/fechaFinEditTxt"
            android:layout_alignEnd="@id/fechaFinEditTxt"/>
        <TextView
            android:id="@+id/contactoLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_todo_de_contacto"
            android:layout_below="@id/budgetTextView"
            android:layout_marginTop="30dp"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactoLbl"
            android:layout_marginTop="15dp"
            android:layout_alignStart="@id/countryTxtView"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/movilRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_vil"
                android:layout_marginRight="50dp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/emailRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
        </RadioGroup>

        <TextView
            android:id="@+id/movilTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="30dp"
            android:text="@string/n_m_tel_fono"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView"/>
        <EditText
            android:id="@+id/movilEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_below="@id/radioGroup"
            android:layout_toRightOf="@id/budgetTextView"
            android:layout_toEndOf="@id/budgetTextView"
            android:layout_alignBaseline="@id/movilTextView"
            android:hint="@string/n_mero_de_tel_fono"
            android:textSize="14sp"
            android:layout_alignLeft="@id/fechaFinEditTxt"
            android:layout_alignStart="@id/fechaFinEditTxt"
            android:layout_alignRight="@id/fechaFinEditTxt"
            android:layout_alignEnd="@id/fechaFinEditTxt" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="30dp"
            android:text="@string/direcci_n_email"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/emailEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@id/radioGroup"
            android:layout_toRightOf="@id/budgetTextView"
            android:layout_toEndOf="@id/budgetTextView"
            android:layout_alignBaseline="@id/emailTextView"
            android:hint="@string/direcci_n_de_correo_electr_nico"
            android:textSize="14sp"
            android:layout_alignLeft="@id/fechaFinEditTxt"
            android:layout_alignStart="@id/fechaFinEditTxt"
            android:layout_alignRight="@id/fechaFinEditTxt"
            android:layout_alignEnd="@id/fechaFinEditTxt"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/publicationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_marginTop="30dp"
            android:text="@string/comentario"
            android:layout_alignLeft="@id/countryTxtView"
            android:layout_alignStart="@id/countryTxtView"/>

        <EditText
            android:id="@+id/publicationEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/publicationTextView"
            android:inputType="textMultiLine"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textSize="14dp"
            android:hint="@string/breve_descripcion_del_viaje_opcional"
            android:gravity="top|left"
            android:layout_alignStart="@id/countryTxtView"
            android:layout_alignLeft="@id/countryTxtView"/>
        <Button
            android:id="@+id/publishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:text="@string/publicar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_below="@id/publicationEditTxt"/>
        <Button
            android:id="@+id/cancelarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/cancelar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_below="@id/publicationEditTxt"/>



    </RelativeLayout>

</FrameLayout>