<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Presentation.Controllers.LoginActivity"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:src="@mipmap/ic_globe_logo"
        android:contentDescription="@string/logo_de_la_aplicaci_n"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="2dp"/>
        <EditText
            android:id="@+id/password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:layout_below="@id/email_txt"
            android:layout_margin="2dp"/>
        <Button
            android:id="@+id/entrar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_txt"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_margin="20dp"/>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/entrar_btn"/>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryLight"
            android:layout_margin="20dp"/>
    </RelativeLayout>

</LinearLayout>