<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Fragments.RegisterEmailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/preguntaLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduce_tu_correo_electr_nico"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/correoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            android:layout_below="@id/preguntaLbl"
            android:inputType="textEmailAddress"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:layout_below="@id/correoTxt"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/password2Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repite_la_contrase_a"
            android:layout_below="@id/passwordTxt"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
        <CheckBox
            android:id="@+id/terminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password2Txt"
            android:text="He leído y acepto las "
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <TextView
            android:id="@+id/linkTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password2Txt"
            android:text="@string/t_rminos_y_condiciones"
            android:clickable="true"
            android:textColor="@color/colorPrimary"
            android:layout_alignBaseline="@id/terminos"
            android:layout_toRightOf="@id/terminos"
            android:layout_toEndOf="@id/terminos"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/siguiente_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryLight"
            android:layout_below="@id/terminos"
            android:layout_margin="20dp" />
    </RelativeLayout>

</FrameLayout>